--- a/Chat/Dockerfile
+++ b/Chat/Dockerfile
@@ -1,13 +1,27 @@
-FROM ollama/ollama
+FROM nvidia/cuda:12.2.2-base-ubuntu22.04
 
-WORKDIR /root
+WORKDIR /app
 
-COPY requirements.txt ./
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    curl \
+    python3 \
+    python3-pip \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN apt update 
-RUN apt-get install -y python3 python3-pip vim git
-RUN pip install -r requirements.txt
+RUN curl -fsSL https://ollama.ai/install.sh | sh
+
+ENV PATH="/usr/local/cuda/bin:${PATH}"
+ENV LD_LIBRARY_PATH="/usr/local/cuda/lib64:${LD_LIBRARY_PATH}"
+
+COPY requirements.txt .
+COPY ollama-start.sh .
+
+RUN pip install --no-cache-dir -r requirements.txt
+RUN chmod +x ollama-start.sh
+
+COPY . .
 
 EXPOSE 8501
 EXPOSE 11434
-ENTRYPOINT ["./OllamaStart.sh"]
+ENTRYPOINT ["./ollama-start.sh"]
