--- a/Chat/requirements.txt
+++ b/Chat/requirements.txt
@@ -1,4 +1,8 @@
 streamlit
 ollama
-llama-index
+llama-index-core
+llama-index-vector-stores-chroma
+llama-index-llms-ollama
+llama-index-embeddings-ollama
 chromadb
+pysqlite3-binary
