--- a/Chat/requirements.txt
+++ b/Chat/requirements.txt
@@ -1,8 +1,13 @@
 streamlit
-ollama
-llama-index-core
-llama-index-vector-stores-chroma
-llama-index-llms-ollama
-llama-index-embeddings-ollama
+llama-index
+transformers
+torch
+sentence-transformers
 chromadb
-pysqlite3-binary
+llama-index-llms-huggingface
+llama-index-llms-huggingface-api
+llama-index-embeddings-huggingface
+sacremoses
+langchain
+langchain-community
+einops
