--- a/Chat/requirements.txt
+++ b/Chat/requirements.txt
@@ -1,18 +1,17 @@
-streamlit
-pysqlite3-binary
-llama-index
-transformers
-torch
-sentence-transformers
-chromadb
-llama-index-llms-huggingface
-llama-index-llms-huggingface-api
-llama-index-core 
-llama-index-vector-stores-chroma
-llama-index-embeddings-huggingface
-sacremoses
-langchain
-langchain-community
-einops
+streamlit==1.45.0
+pysqlite3-binary==0.5.2
+llama-index-core==0.12.38
+transformers==4.40.0
+torch==2.3.0
+sentence-transformers==3.0.0
+chromadb==0.5.0
+llama-index-llms-huggingface==0.1.10
+llama-index-llms-huggingface-api==0.1.8
+llama-index-vector-stores-chroma==0.1.7
+llama-index-embeddings-huggingface==0.1.9
+sacremoses==0.1.1
+langchain==0.3.25
+langchain-community==0.1.0
+einops==0.8.0
 protobuf==3.20.3
-llama-index-llms-llama-cpp
+llama-index-llms-llama-cpp==0.1.6
