--- a/Chat/requirements.txt
+++ b/Chat/requirements.txt
@@ -4,7 +4,7 @@ llama-index-core>=0.12.38
 transformers>=4.40.0
 torch>=2.7.0
 sentence-transformers>=3.0.0
-chromad>=0.5.0
+chromadb>=0.5.0
 llama-index-llms-huggingface>=0.1.10
 llama-index-llms-huggingface-api>=0.1.8
 llama-index-vector-stores-chroma>=0.1.7
